Be sure to lock the ratio of the slides at 4:3

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           touch: false,
           click: false
         },
+        ratio: '4:3',
         slideNumberFormat: '',
         highlightLanguage: 'elixir',
         highlightStyle: 'monokai',
